force-app/main/default/objects/AAO_Claim_Basis__c/AAO_Claim_Basis__c.object-meta.xml
<CustomObject>
    <description>What a claim rests on, beyond its own quotes. Half frozen, half live. It records what was cited, not what was available.</description>
    <label>AAO Claim Basis</label>
    <nameField>
        <displayFormat>CB-{00000000}</displayFormat>
        <label>AAO Claim Basis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Claim Bases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>