force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Cited_Answer__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cited_Answer__c</fullName>
    <description>Written by: Commit. Read by: The live record. Traversal, and the current-state half of the subquery.</description>
    <label>Cited Answer</label>
    <type>Lookup</type>
    <referenceTo>AAO_Answer__c</referenceTo>
    <relationshipName>AAO_Cited_By</relationshipName>
    <relationshipLabel>AAO Cited By</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>