force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Cited_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cited_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: the Solution route. Read by: the live record, for the current-state half of then-and-now. The frozen half is AAO_Snapshot__c.</description>
    <label>Cited Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>AAO Claim Bases</relationshipLabel>
    <relationshipName>AAO_Line_Item_Claim_Bases</relationshipName>
    <type>Lookup</type>
</CustomField>