force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Cited_Participant__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cited_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: the computed catalog. Read by: the live record, for the current-state half of the then-and-now subquery. The participant row IS the record of a person having been in a conversation, so a computed claim about participation cites it rather than citing the Source, which would say the conversation happened without saying who was in it.</description>
    <label>Cited Participant</label>
    <referenceTo>AAO_Participant__c</referenceTo>
    <relationshipLabel>AAO Claim Bases</relationshipLabel>
    <relationshipName>AAO_Claim_Bases</relationshipName>
    <type>Lookup</type>
</CustomField>