force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Cited_Row_Deleted__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cited_Row_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by: The orphan sweep. Read by: The live record is gone; the snapshot is all that remains. Visible to operations, never pushed at a seller.</description>
    <label>Cited Row Deleted</label>
    <type>Checkbox</type>
</CustomField>