force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Cited_Type__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cited_Type__c</fullName>
    <description>Written by: Commit. Read by: Which lookup is populated; how to read the snapshot.</description>
    <label>Cited Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line_Item</fullName>
                <label>Line Item</label>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Map_Row</fullName>
            </value>
            <value>
                <fullName>Insight_Card</fullName>
            </value>
            <value>
                <fullName>Decision_Criterion</fullName>
            </value>
            <value>
                <fullName>Answer</fullName>
            </value>
            <value>
                <fullName>Qualifier_Status</fullName>
            </value>
            <value>
                <fullName>Shadow_Person</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>