force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Claim__c.field-meta.xml
<CustomField>
    <fullName>AAO_Claim__c</fullName>
    <description>Written by: Commit. Read by: The claim this supports. Cascades with it at retirement.</description>
    <label>Claim</label>
    <type>MasterDetail</type>
    <referenceTo>AAO_Claim__c</referenceTo>
    <relationshipName>AAO_Claim_Bases</relationshipName>
    <relationshipLabel>AAO Claim Bases</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>