force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Covers_Element__c.field-meta.xml
<CustomField>
    <fullName>AAO_Covers_Element__c</fullName>
    <description>Written by: Commit, from the coverage adjudication. Read by: Which part of the proposition this row covers. This is what makes partial coverage queryable rather than buried in JSON.</description>
    <label>Covers Element</label>
    <type>Text</type>
    <length>40</length>
</CustomField>