force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>AAO_Snapshot__c</fullName>
    <description>JSON, immutable, the cited fields and their values at claim time. Written by: Commit. Read by: The frozen half. What the row actually said when the claim was written.</description>
    <label>Snapshot</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>