force-app/main/default/objects/AAO_Claim_Basis__c/fields/AAO_Snapshot_Taken__c.field-meta.xml
<CustomField>
    <fullName>AAO_Snapshot_Taken__c</fullName>
    <description>Immutable. Written by: Commit. Read by: When the freeze happened.</description>
    <label>Snapshot Taken</label>
    <type>DateTime</type>
</CustomField>